# ecsh

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: main.c  utils.c  utils.h
tests/: main_test.c  utils_test.c
